--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,7 @@ pyarrow
 tabulate
 html5lib
 duckdb
+# नीचे दिए गए पैकेज्स अतिरिक्त हैं जो आपके कोड की पूरी कार्यक्षमता के लिए आवश्यक हैं
+langchain-community  # SerpAPI और अन्य कम्युनिटी टूल्स के लिए
+psutil               # सिस्टम डायग्नोस्टिक्स के लिए
+httpx                # डायग्नोस्टिक्स में नेटवर्क जांच के लिए
